<resources>
    <string name="app_name">NumberGuesser</string>

    <string name="welcome">Welcome</string>
    <string name="action_settings">Settings</string>
    <string name="guessString">Start Guessing!</string>
    <string name="robotString">I thought of a number between 1 and 1000</string>
    <string name="enter_guess">Enter your number:  </string>
    <string name="make_guess">Guess</string>
    <string name="initial_message" />
    <string name="final_message" />
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
</resources>
