<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="30dp"
    android:background="@color/black"
    tools:context=".SecondActivity">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_guess"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:textSize="35sp"
        android:id="@+id/textView3" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/guess_value"
        android:paddingTop="35dp"
        android:textColor="@color/white"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:inputType="number"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/button2"
        android:text="@string/make_guess"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:layout_marginTop="208dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="userGuess"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/infoDisplay"
        android:text="@string/initial_message"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginTop="140dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_message"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="340dp"
        android:textColor="@color/white"
        android:id="@+id/final_message_id"/>

</RelativeLayout>
